--- a/index.html
+++ b/index.html
@@ -476,8 +476,119 @@
             </li>
           </ul>
         </div>
+
+        <form class="footer-form" name="subscribe_form">
+          <label class="form-label">
+            Subscribe
+            <input
+              class="footer-input"
+              type="email"
+              name="subscribe_email"
+              placeholder="E-mail"
+              required
+            />
+          </label>
+          <button class="subscribe-btn" type="submit">
+            Subscribe
+            <svg class="subscribe-btn-icon" width="24" height="24">
+              <use href="./images/icons.svg#icon-frame"></use>
+            </svg>
+          </button>
+        </form>
       </div>
     </footer>
     <!--------------- FOOTER /--------------->
+
+    <!--------------- BACKDROP --------------->
+    <div class="backdrop">
+      <div class="modal">
+        <button class="modal-close-btn" type="button">
+          <svg
+            class="modal-close-icone"
+            width="8"
+            height="8"
+            aria-label="close button"
+          >
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+        <p class="modal-text">Leave your contacts and we will call you back</p>
+        <form class="modal-form">
+          <div class="modal-form-wrapper">
+            <label class="modal-form-label" for="user-name">Name</label>
+            <div class="modal-input-wrapper">
+              <input
+                class="modal-form-field"
+                type="text"
+                name="user_name"
+                id="user-name"
+                required
+              />
+              <svg class="modal-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-user"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-form-wrapper">
+            <label class="modal-form-label" for="user-phone">Phone</label>
+            <div class="modal-input-wrapper">
+              <input
+                class="modal-form-field"
+                type="tel"
+                name="user_phone"
+                id="user-phone"
+                required
+              />
+              <svg class="modal-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-phone"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-form-wrapper">
+            <label class="modal-form-label" for="user-email">Email</label>
+            <div class="modal-input-wrapper">
+              <input
+                class="modal-form-field"
+                type="email"
+                name="user_email"
+                id="user-email"
+                required
+              />
+              <svg class="modal-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-email"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-form-massage-wrapper">
+            <label class="modal-form-label" for="user-comment">Comment</label>
+            <textarea
+              class="modal-form-massage"
+              name="user_comment"
+              id="user-comment"
+              placeholder="Text input"
+            ></textarea>
+          </div>
+          <div class="modal-form-checkbox-wrapper">
+            <input
+              class="modal-form-checkbox-field visually-hidden"
+              type="checkbox"
+              name="user_policy"
+              id="user-policy"
+              value="true"
+              required
+            />
+            <label class="modal-form-checkbox-label" for="user-policy">
+              <span class="modal-own-checkbox">
+                <svg class="modal-own-checkbox-icon" width="10" height="8">
+                  <use href="./images/icons.svg#icon-mark"></use></svg></span
+              >I accept the terms and conditions of the
+              <a class="policy-link" href="#">Privacy Policy</a>
+            </label>
+          </div>
+          <button class="modal-submit-btn hero-btn" type="submit">Send</button>
+        </form>
+      </div>
+    </div>
+    <!--------------- BACKDROP /--------------->
   </body>
 </html>
