--- a/index.html
+++ b/index.html
@@ -476,25 +476,26 @@
             </li>
           </ul>
         </div>
-
-        <form class="footer-form" name="subscribe_form">
-          <label class="form-label">
-            Subscribe
-            <input
-              class="footer-input"
-              type="email"
-              name="subscribe_email"
-              placeholder="E-mail"
-              required
-            />
-          </label>
-          <button class="subscribe-btn" type="submit">
-            Subscribe
-            <svg class="subscribe-btn-icon" width="24" height="24">
-              <use href="./images/icons.svg#icon-frame"></use>
-            </svg>
-          </button>
-        </form>
+        <div class="footer-form-wrapper">
+          <p class="subscribe-text">Subscribe</p>
+          <form class="footer-form" name="subscribe_form">
+            <label class="form-label">
+              <input
+                class="footer-input"
+                type="email"
+                name="subscribe_email"
+                placeholder="E-mail"
+                required
+              />
+            </label>
+          </form>
+        </div>
+        <button class="subscribe-btn" type="submit">
+          Subscribe
+          <svg class="subscribe-btn-icon" width="24" height="24">
+            <use href="./images/icons.svg#icon-frame"></use>
+          </svg>
+        </button>
       </div>
     </footer>
     <!--------------- FOOTER /--------------->
