--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
               <input
                 class="footer-input"
                 type="email"
-                name="subscribe_email"
+                name="subscribe-email"
                 placeholder="E-mail"
                 required
               />
@@ -521,7 +521,7 @@
               <input
                 class="modal-form-field"
                 type="text"
-                name="user_name"
+                name="user-name"
                 id="user-name"
                 required
               />
@@ -564,7 +564,7 @@
             <label class="modal-form-label" for="user-comment">Comment</label>
             <textarea
               class="modal-form-massage"
-              name="user_comment"
+              name="user-comment"
               id="user-comment"
               placeholder="Text input"
             ></textarea>
@@ -573,12 +573,12 @@
             <input
               class="modal-form-checkbox-field visually-hidden"
               type="checkbox"
-              name="user_policy"
-              id="user-policy"
+              name="user-privacy"
+              id="user-privacy"
               value="true"
               required
             />
-            <label class="modal-form-checkbox-label" for="user-policy">
+            <label class="modal-form-checkbox-label" for="user-privacy">
               <span class="modal-own-checkbox">
                 <svg class="modal-own-checkbox-icon" width="10" height="8">
                   <use href="./images/icons.svg#icon-mark"></use></svg></span
