--- a/index.html
+++ b/index.html
@@ -586,7 +586,7 @@
               <a class="policy-link" href="#">Privacy Policy</a>
             </label>
           </div>
-          <button class="hero-btn" type="submit">Send</button>
+          <button class="modal-submit-btn" type="submit">Send</button>
         </form>
       </div>
     </div>
