--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@
     <!--------------- FOOTER /--------------->
 
     <!--------------- BACKDROP --------------->
-    <div class="backdrop is-open">
+    <div class="backdrop">
       <div class="modal">
         <button class="modal-close-btn" type="button">
           <svg
